# mrs3_backend

./: README.md  main.py  pyproject.toml  validators.py
.cph/: .Detecting_Molecules.cpp_ae523a79f048bc71eecff7ec7da3b8b6.prob
MRS3/ServerInterface/: ImgToPkg_Interface.py  PkgToImg_Interface.py  Utils.py
temp/: 009d3cb9-aa3c-4b99-93a3-ca58671973b4_compressed-output.pkg  0a68b198-b1d3-4903-8fc6-00539c6bc190_compressed-output (2).pkg  1f4141e7-324e-499d-901d-cec0b6baa498_output.pkg  abb4abee-b972-4516-a655-f69dec486b23_output (2).pkg  da7b177a-adbe-4d1c-9769-8bfb8330858f_output.pkg  f659cc50-3b2d-476f-a3f8-b2c4d0ff615c_compressed-output (1).pkg  output.pkg
temp/1309c7cc-261f-43a9-a92b-5374c2979c05_unpacked_compressed-output (1).pkg/: config.ini
temp/16646c9d-04b3-48eb-a2e6-c7b8465df5e6_unpacked_compressed-output.pkg/: config.ini
temp/2a90dfda-c584-4afb-9891-3d87ddbec9d2_unpacked_compressed-output (2).pkg/: config.ini
