[tool.poetry]
name = "mrs3-backend"
version = "0.1.0"
description = ""
authors = ["SooinPark1019 <hyperion1019@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.116.0,<0.117.0"
uvicorn = {extras = ["standard"], version = ">=0.35.0,<0.36.0"}
opencv-python = ">=4.12.0.88,<5.0.0.0"
multipledispatch = ">=1.0.0,<2.0.0"
python-multipart = ">=0.0.20,<0.0.21"
selenium = "^4.34.2"
webdriver-manager = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
